--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,6 +18,7 @@
     .choices__input {
         margin-bottom: 0;
         padding: 4px 0 4px 2px;
+        @apply text-sm italic text-gray-400 opacity-75;
     }
 
 
